# test_stabilize

./: .gitignore  .mcp.json  API-INTEGRATION-TESTS.md  BASELINE-TEST-RESULTS.md  CI-CD-SETUP-GUIDE.md  DELIVERABLES-SUMMARY.md  DOCKER-TEST-ENVIRONMENT.md  Dockerfile.polyorb  EXECUTION-COMPLETE.md  FRIDAY-SESSION-AGENDA-NOV-8.md  FRIDAY-SESSION-DECISIONS-NOV-8.md  GITHUB-DEPLOYMENT.md  GRAFANA-DASHBOARD-SPEC.md  IMPLEMENTATION-README.md  INTEGRATION-PHASE-EXECUTION-PLAN.md  MEMORY-MANAGEMENT-TEST-DESIGN.md  MUTATION-TESTING-RESULTS.md  NEW-AGENT-ROLES-ONBOARDING.md  RDB-004-POLYORB-ANY-DECOMPOSITION-UPDATED.md  README.md  ROADMAP-EXECUTIVE-SUMMARY.md  ROADMAP-SHARING-GUIDE.md  ROADMAP-TIMELINE.md  SHARED-REFACTORING-ROADMAP.md  TASK-3.2-TYPE-COMPATIBILITY-ANALYSIS.md  TASK-d163e7-TEST-AUTOMATION-STATUS.md  TASK1-REVIEW-TEST-STABILIZE.md  TASK6-COMPLETION-REPORT.md  TASK6-STRATEGIC-PREWORK-PLAN.md  TEST-FRAMEWORK-ARCHITECTURE.md  UNIFIED_MASTER_ROADMAP_FINAL.md  WEEK-1-EXECUTION-PLAN.md  WEEK-1-KICKOFF-AGENDA.md  WEEK-1-KICKOFF-MEETING-MINUTES.md  WEEK1-AUNIT-SETUP.md  WEEK1-GOOGLETEST-SETUP.md  WEEK1-JEST-SETUP.md  claude.md  docker-compose.e2e.yml  docker-compose.polyorb.yml  (+2 more)
.github/workflows/: build-test.yml  contract-testing.yml  e2e-smoke.yml  mutation-testing.yml  performance-baseline.yml  sanitizers-ci.yml  test-suite.yml  test.yml  valgrind-ci.yml
.sanitizers/: asan.supp  lsan.supp  ubsan.supp
cmake/: Sanitizers.cmake
configs/: .mull.yml  ci-fast-fail-pipeline.yml  mutmut_config.py  stryker.conf.js
cpp/: CMakeLists.txt  Makefile  README.md
cpp/src/: string_utils.h
cpp/tests/: string_utils_test.cpp
docs/: ASAN-GNAT-GUIDANCE.md
examples/googletest/: CMakeLists.txt
examples/googletest/tests/security/: authentication_test.cpp
examples/tests/: .codecov.yml  .mutmut-config.py  CI-CD.md  MUTATION-TESTING.md  Makefile  README.md  mull.yml  stryker.conf.json
examples/tests/component/: README.md  docker-compose.test.yml  test_widget_with_cache.py
examples/tests/component/event_dispatcher/: event_flow.component.spec.ts
examples/tests/component/input_handler/: input_processing.component.spec.ts
examples/tests/component/state_manager/: state_persistence.component.spec.ts
examples/tests/component/ui_renderer/: rendering_pipeline.component.spec.ts
examples/tests/component/widget_core/: widget_lifecycle.component.spec.ts
examples/tests/contracts/: README.md  docker-compose.pact-broker.yml
examples/tests/contracts/consumers/api_gateway/: orb_core.pact.spec.ts  package.json  security_service.pact.spec.ts  widget_core.pact.spec.ts  widget_core_errors.pact.spec.ts
examples/tests/contracts/consumers/input_handler/: event_processor.pact.spec.ts
examples/tests/contracts/consumers/state_manager/: event_dispatcher.pact.spec.ts
examples/tests/contracts/consumers/widget_core/: platform_adapter.pact.spec.ts  state_manager.pact.spec.ts  ui_renderer.pact.spec.ts
examples/tests/e2e/: README.md
examples/tests/e2e/load_tests/: baseline.js
examples/tests/e2e/user-workflows/: widget-creation.e2e.spec.ts  widget-interaction.e2e.spec.ts
examples/tests/integration/: README.md  conftest.py  event_propagation_flow.integration.spec.ts  test_concurrent_operations.py  test_error_recovery.py  test_orb_integration.py  test_security_flow.py  test_widget_workflow.py  widget_rendering_flow.integration.spec.ts
examples/tests/performance/: README.md  baseline_capture.py  baseline_compare.py
examples/tests/unit/: README.md
examples/tests/unit/ada/: orb_core_tests.adb  orb_core_tests.ads  test_object_ref.adb  test_object_ref.ads  test_runner.adb  test_suite.gpr
examples/tests/unit/cpp/: widget_core_test.cpp  widget_core_tests.cpp
examples/tests/unit/typescript/: event_dispatcher_tests.spec.ts  event_processor_tests.spec.ts  input_handler_tests.spec.ts  orb_core_tests.spec.ts  platform_adapter_tests.spec.ts  state_manager_tests.spec.ts  ui_renderer_tests.spec.ts
grafana/: IMPORT-GUIDE.md  alert-rules.json  dashboard.json
improvements/: CICD-INFRASTRUCTURE-REVIEW.md  COVERAGE-MEASUREMENT-GUIDE.md  DAY1-EOD-SUMMARY.md  DAY2-EOD-SUMMARY.md  DAY3-EOD-SUMMARY.md  DAY4-EOD-SUMMARY.md  MEMORY-TESTS-IMPLEMENTATION.md  MUTATION-TESTING-RESEARCH.md  MUTATION-TESTING-USAGE-GUIDE.md  PERFORMANCE-TESTING-GUIDE.md  PREWORK-COMPLETION-REPORT.md  generate_mutants.py  measure_performance.py  performance_benchmark.adb  test_memory_management.adb  test_memory_management.ads  test_memory_management_phase2.adb  test_memory_management_phase2.ads  test_memory_management_phase3.adb  test_memory_management_phase3.ads
observability/: DEPLOYMENT.md  OBSERVABILITY-ARCHITECTURE.md  README.md
observability/alerting-rules/: prometheus-alert-rules.yaml
observability/dashboards/: 01-overview-dashboard.json  02-wxwidgets-dashboard.json  07-slo-dashboard.json  README.md
observability/helm-values/: jaeger-values.yaml  loki-values.yaml  prometheus-values.yaml
observability/service-monitors/: README.md  api-gateway-servicemonitor.yaml  orb-core-servicemonitor.yaml  widget-core-servicemonitor.yaml
performance/baselines/: cdr-baseline-2025-11-26.json
polyorb_tests/tests/: test_runner.adb
polyorb_tests/tests/polyorb_any/: any_accessor_test_suite.adb  any_accessor_test_suite.ads
polyorb_tests/tests/polyorb_giop/: cdr_regression_tests.adb  cdr_regression_tests.ads
polyorb_tests/tests/validation/: validation_tests.adb
scripts/: validate-docker-environment.sh
scripts/sanitizers/: run-all-sanitizers.sh  run-asan.sh  run-ubsan.sh
services/auth-service/: CMakeLists.txt
src/: calculator.ts
src/__tests__/: calculator.test.ts
src/__tests__/factories/: user.factory.test.ts  user.factory.ts
src/__tests__/security/: timing-attacks.test.ts
src/api/: server.ts
src/api/__tests__/: server.integration.test.ts
tests/e2e/: README.md  pytest.ini
tests/e2e/fixtures/: corba_servants.py
tests/e2e/helpers/: docker_helper.py
tests/e2e/smoke/: test_corba_smoke.py
workflows/: deploy.yaml  polyorb-ci.yaml  wxwidgets-ci.yaml
(+1 files in other folders)
